fixing the spacing of ul in the main content

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -141,8 +141,8 @@ body{
     color: Grey;
     list-style: none;
     margin-top: 2rem;
-    line-height: 25px;
-    font-size: 15px;
+    line-height: 23px;
+    font-size: 13px;
 
     .whiteH3 {
         color: white;
@@ -186,7 +186,8 @@ body{
 .FlexFooter {
     display: flex;
     justify-content: space-between;
-    padding: 2.1rem 2rem;
+    padding: 2.1rem 0.5rem;
+    
   
     
 }
